# ffmpeg_helloworld

./: .gitignore  CMakeLists.txt  README.md
src/: hello_ffmpeg.cpp
